# LegalGrid

./: .gitignore  README.md  SUCCESS_BANNER.txt  docker-compose.prod.yml  package.json  start.sh
backend/: .dockerignore  .env.example  .renderignore  Dockerfile  Dockerfile.qdrant  README.md  docker-compose.yml  main.py  pyproject.toml  render.yaml  requirements.txt  test_all_agents.py  test_all_endpoints.py  test_chat_api.py  test_comprehensive.py  test_results.json  test_sessions.py  test_setup.py
backend/app/: __init__.py
backend/data/: constitution_parsed.json  corpus.jsonl
backend/scripts/: api_expansion.py  bulk_ingest.py  corpus_data.py  create_training_data.py  evaluate_retrieval.py  expand_corpus.py  expand_via_api.py  final_validation.py  finetune_embeddings.py  ingest_constitution.py  ingest_from_corpus.py  run_benchmarks.py  run_expansion.py  seed_data.py  test_constitution_parser.py
backend/tests/: test_concurrent.py  test_edge_cases.py  test_performance.py
backend/whoosh_index/: MAIN_0c9rjhivxakkj1zt.seg  MAIN_2v3jv35zjvkaiqtf.seg  MAIN_3worx5p0wwkd8qal.seg  MAIN_8fykbgmu23gdoo35.seg  MAIN_8m0s5ym6dtcnisq4.seg  MAIN_8wcka35j94ikkzr2.seg  MAIN_dfkkrjzfia74c5tt.seg  MAIN_huecwiexiccnffup.seg  MAIN_kjaej72kkqf8qrk3.seg  MAIN_lwcti08qod37knvc.seg  MAIN_nh910la266hufdil.seg  MAIN_oo1uhk4cxnjg09ei.seg  MAIN_pr0la64e9l12w1ve.seg  MAIN_ra5aff1dmogy501g.seg  MAIN_rbzxzapodyn29uqv.seg  MAIN_uhajtp4sociaqaqk.seg  MAIN_umtm0lg9yvwak85b.seg  MAIN_xg8js73iolgnzq7w.seg  MAIN_y0m61ymysfcpci6h.seg  _MAIN_15.toc  _MAIN_461.toc  _MAIN_923.toc  _MAIN_95.toc
(+54 files in other folders)
