[project]
name = "smart-legal-system"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "fastapi>=0.135.2",
    "groq>=0.37.1",
    "langchain>=1.2.13",
    "langchain-groq>=1.1.2",
    "pdfplumber>=0.11.9",
    "pydantic>=2.12.5",
    "pypdf>=6.9.2",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.22",
    "qdrant-client>=1.17.1",
    "requests>=2.33.0",
    "sentence-transformers>=5.3.0",
    "uvicorn>=0.42.0",
    "whoosh>=2.7.4",
]
